update security config